# thaiwater-capture-automate

./: Cargo.toml  Dockerfile  README.md  index.html
src/: main.rs
