[package]
name = "water_monitor_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
headless_chrome = "1.0"
anyhow = "1.0"
opt-level = 'z'     # ปรับปรุงให้ขนาดไฟล์เล็กที่สุด
codegen-units = 1   # ลดการประมวลผลขนานเพื่อประหยัด RAM
panic = 'abort'     # ลด overhead ของระบบ